// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assets should load dynamic assets 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title></title>
    <link rel=\\"stylesheet\\" href=\\"bundles/3dyV3MW.css\\"/>
  </head>
  <body>
    
    

    
        <p>bundles/I3cOAf3.md</p>
    
        <p>bundles/2Mv2FbA.md</p>
    

    
        <p>bundles/I3cOAf3.md</p>
    
        <p>bundles/2Mv2FbA.md</p>
    

  </body>
</html>
"
`;

exports[`Assets should load static assets 1`] = `
"<!DOCTYPE html>
<html lang=\\"en\\">
  <head>
    <meta charset=\\"utf-8\\">
    <title></title>
    <link rel=\\"stylesheet\\" href=\\"bundles/3dyV3MW.css\\"/>
  </head>
  <body>
    
    <p><a href=\\"bundles/2NAZ0GV.txt\\">Click here</a></p>

  </body>
</html>
"
`;
